rewrite new Boolean(...) to Boolean.valueOf(...)
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@12455 842219ff-9341-0410-a943-573460bdd4de